# nanolibc

./: CMakeLists.txt  LICENSE  README.md  meson.build  vcsetup.bat
include/: nanoassert.h  nanostdio.h  nanothreads.h
scripts/: bootstrap-clang-cl-wsl.sh  bootstrap-cmake-llvm-mingw-cross-ucrt.sh  bootstrap-linux.sh
src/: libs_thread.h  nanoassert.c  nanostdio.c  nanothreads.c
